--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# ignore IDEA project files
+.idea
+.iml
+
+# ignore gradle build files
+.gradle
+gradle/
+
+# ignore gradle build directory
+build/
