add ev3 gradle settings

--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,20 @@ apply plugin: "com.github.bdeneuter.mindstorms.ev3"
 task wrapper(type: Wrapper) {
   gradleVersion = '3.4.1'
 }
+
+mindstorms {
+  // Your Java main class (the class with the method: public static void main(String ... args))
+  main = 'ia158.Main'
+
+  // Optional: The IP address from the EV3 brick. Default value is 10.0.1.1
+  ip = '10.0.1.1'
+
+  // Optional: the user for the EV3 brick. Default value is root
+  user = 'root'
+
+  // Optional: the password for the user of the EV3 brick (Don't check in paswords in repositories! If you use a password, put it in the gradle.properties in your GRADLE_HOME and assign the variable to the password field. Default value is none
+  password = ''
+
+  // Optional: the directory on the EV3 brick where the applications will be stored. Default is /home/lejos/programs
+  home = '/home/lejos/programs'
+}
