add android app

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 buildscript {
+  ext.kotlin_version = '1.1.1'
   repositories {
-    maven {
-      url "https://plugins.gradle.org/m2/"
-    }
+    jcenter()
+    maven { url "https://plugins.gradle.org/m2/" }
   }
   dependencies {
     classpath "gradle.plugin.com.github.bdeneuter:mindstorms-plugin:1.2.0"
+
+    // used to build android app
+    classpath 'com.android.tools.build:gradle:2.3.1'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
@@ -17,9 +21,11 @@ task wrapper(type: Wrapper) {
   gradleVersion = '3.4.1'
 }
 
+// LEGO configuration
+
 mindstorms {
   // Your Java main class (the class with the method: public static void main(String ... args))
-  main = 'ia158.Main'
+  main = 'ia158.BroadcastReceiver'
 
   // Optional: The IP address from the EV3 brick. Default value is 10.0.1.1
   ip = '10.0.1.1'
